syntax = "proto3";

package pb.users;

option go_package = "truenorth/go/pb/users";

import "users/structures.proto";
import "google/protobuf/timestamp.proto";

message CreateUserRequest {
  string username = 1;
  string password = 2;
}

message CreateUserResponse {
  User user = 1;
}

message GetUserRequest {
  int64 id = 1;
}

message GetUserResponse {
  User user = 1;
}

message GetUserByUsernameRequest {
  string username = 1;
}

message GetUserByUsernameResponse {
  User user = 1;
}

message DeleteUserRequest {
  int64 id = 1;
}

message DeleteUserResponse {
  User user = 1;
}


message CheckUserCredentialsRequest {
  string username = 1;
  string password = 2;
}

message CheckUserCredentialsResponse {
  User user = 1;
}

service UserService {
  rpc CheckUserCredentials(CheckUserCredentialsRequest) returns (CheckUserCredentialsResponse) {}
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
  rpc GetUserByUsername(GetUserByUsernameRequest) returns (GetUserByUsernameResponse) {}
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
}
